--- a/app/src/main/res/layout/activity_event_detail.xml
+++ b/app/src/main/res/layout/activity_event_detail.xml
@@ -65,6 +65,7 @@
         android:layout_margin="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/ic_star_border" />
+        app:srcCompat="@drawable/ic_star_border"
+        android:tint="@color/white"/>
 
 </android.support.design.widget.CoordinatorLayout>
