--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -35,7 +35,7 @@
                 ls:counterEnabled="true"
                 ls:counterMaxLength="400">
 
-                <EditText
+                <android.support.design.widget.TextInputEditText
                     android:id="@+id/input_description"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
             android:orientation="horizontal">
 
             <RadioButton
-                android:id="@+id/radioAddress"
+                android:id="@+id/radio_address_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -87,7 +87,7 @@
                 android:text="@string/radio_address" />
 
             <RadioButton
-                android:id="@+id/radioCoordinates"
+                android:id="@+id/radio_coordinates_event"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -105,27 +105,29 @@
 
 
 
-            <RelativeLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <!--<ImageView-->
-                    <!--android:id="@+id/countryIcon"-->
-                    <!--android:visibility="gone"-->
-                    <!--android:layout_width="wrap_content"-->
-                    <!--android:layout_height="wrap_content"-->
-                    <!--android:layout_centerVertical="true"-->
-                    <!--android:paddingRight="8dp"-->
-                    <!--android:src="@drawable/ic_map" />-->
+                android:orientation="horizontal"
+                android:layout_gravity="center_vertical"
+                android:gravity="center_vertical">
 
                 <fragment
                     android:id="@+id/place_autocomplete_fragment"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_weight="5"
                     android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
                     />
-            </RelativeLayout>
+                
+                <ImageView
+                    android:id="@+id/event_get_position"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:src="@drawable/ic_gps_fixed"
+                    android:tint="@color/md_black_1000"/>
+            </LinearLayout>
         </LinearLayout>
 
         <RelativeLayout
@@ -155,7 +157,7 @@
                     android:layout_weight="1"
                     ls:errorEnabled="true">
 
-                    <EditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/input_latitude"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -171,7 +173,7 @@
                     android:layout_weight="1"
                     ls:errorEnabled="true">
 
-                    <EditText
+                    <android.support.design.widget.TextInputEditText
                         android:id="@+id/input_longitude"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
