--- a/app/src/main/res/layout/fragment_eventdetail.xml
+++ b/app/src/main/res/layout/fragment_eventdetail.xml
@@ -3,13 +3,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:weightSum="5">
+    android:weightSum="6">
 
     <TextView
         android:id="@+id/id"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/description_margin"
         android:layout_weight="2"
         android:textAppearance="?attr/textAppearanceListItem" />
 
@@ -18,6 +18,6 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_margin="@dimen/description_margin"
         android:textAppearance="?attr/textAppearanceListItem" />
 </LinearLayout>
