--- a/app/src/main/res/layout/fragment_subscription.xml
+++ b/app/src/main/res/layout/fragment_subscription.xml
@@ -19,7 +19,7 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_margin="8dp"
-            android:src="@drawable/ic_robbery" />
+            android:src="@drawable/ic_notifications_button" />
 
 
         <View
@@ -74,17 +74,33 @@
 
             </LinearLayout>
         </RelativeLayout>
-
-        <TextView
-            android:id="@+id/sub_street"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/second_row"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/first_row"
-            android:layout_margin="8dp"
-            android:text="Via Roma"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:textAppearance="?attr/textAppearanceListItem" />
+            >
+
+            <TextView
+                android:id="@+id/sub_street"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:text="Via Roma"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:textAppearance="?attr/textAppearanceListItem" />
+
+            <Switch
+                android:id="@+id/switch_notifications"
+                android:layout_alignParentRight="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </RelativeLayout>
+
 
         <View
             android:layout_width="match_parent"
