--- a/wear/src/main/res/layout/main_element.xml
+++ b/wear/src/main/res/layout/main_element.xml
@@ -1,29 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:weightSum="5"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:weightSum="5">
 
     <ImageView
         android:id="@+id/main_recycler_image"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:src="@mipmap/ic_launcher"/>
+        android:layout_weight="1"
+        android:src="@mipmap/ic_launcher" />
 
     <TextView
         android:id="@+id/main_recycler_text"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:text="PROVA PROVA PROVA"
-        android:maxLines="1"
+        android:layout_weight="4"
         android:ellipsize="end"
-        android:gravity="center_vertical"/>
-
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:text="PROVA PROVA PROVA" />
 
 
 </LinearLayout>
