--- a/wear/src/main/res/layout/rect_activity_main.xml
+++ b/wear/src/main/res/layout/rect_activity_main.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:orientation="vertical"
-    tools:context="com.moscowmuleaddicted.neighborhoodsecuritywear.activity.MainActivity"
+    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.activity.MainActivity"
     tools:deviceIds="wear_square">
 
     <TextView android:id="@+id/text" android:layout_width="wrap_content"
