Map shortcut to event and subscription creation

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -1,32 +1,64 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:map="http://schemas.android.com/apk/res-auto"
-map:uiZoomControls="true"
-map:uiZoomGestures="true"
-map:mapType="normal"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context=".fragment.NSMapFragment">
-<fragment
-    android:id="@+id/map"
-    android:name="com.moscowmuleaddicted.neighborhoodsecurity.fragment.NSMapFragment"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:map="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.NSMapFragment">
-    <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
-        android:layout_gravity="top"
-        android:layout_margin="5dp"
+    android:orientation="vertical"
+    map:mapType="normal"
+    map:uiZoomControls="true"
+    map:uiZoomGestures="true"
+    tools:context=".fragment.NSMapFragment">
+
+    <fragment
+        android:id="@+id/map"
+        android:name="com.moscowmuleaddicted.neighborhoodsecurity.fragment.NSMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        card_view:cardCornerRadius="4dp">
-        <fragment
-            android:id="@+id/place_autocomplete_fragment"
+        android:layout_height="match_parent"
+        tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.NSMapFragment">
+
+        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment" />
-    </android.support.v7.widget.CardView>
-</fragment>
-</LinearLayout>
+            android:layout_height="40dp"
+            android:layout_gravity="top"
+            android:layout_margin="5dp"
+            card_view:cardCornerRadius="4dp">
+
+            <fragment
+                android:id="@+id/place_autocomplete_fragment"
+                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </android.support.v7.widget.CardView>
+    </fragment>
+
+    <com.scalified.fab.ActionButton
+        android:id="@+id/new_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/fab_margin"
+        android:layout_marginRight="@dimen/fab_margin"
+        app:button_colorPressed="@color/colorAccent"
+        app:layout_anchor="@id/map"
+        app:layout_anchorGravity="bottom|right|end"
+        fab:button_color="@color/colorAccent"
+        fab:button_colorRipple="@color/colorAccentDark"
+        fab:hide_animation="@anim/fab_roll_to_down"
+        fab:image="@drawable/fab_plus_icon"
+        fab:image_size="24dp"
+        fab:rippleEffect_enabled="true"
+        fab:shadowResponsiveEffect_enabled="false"
+        fab:shadow_color="#757575"
+        fab:shadow_radius="1.0dp"
+        fab:shadow_xOffset="0.5dp"
+        fab:shadow_yOffset="1.0dp"
+
+        fab:show_animation="@anim/fab_roll_from_down"
+        fab:type="DEFAULT" />
+</android.support.design.widget.CoordinatorLayout>
