--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -1,7 +1,6 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    >
+    android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:ls="http://schemas.android.com/apk/res-auto"
@@ -31,9 +30,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toRightOf="@id/descriptionIcon"
-                ls:errorEnabled="true"
                 ls:counterEnabled="true"
-                ls:counterMaxLength="400">
+                ls:counterMaxLength="400"
+                ls:errorEnabled="true">
 
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/input_description"
@@ -104,30 +103,37 @@
             android:orientation="vertical">
 
 
-
-            <LinearLayout
+            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                android:id="@+id/card_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_vertical"
-                android:gravity="center_vertical">
+                android:layout_height="40dp"
+                android:layout_gravity="top"
+                android:layout_margin="5dp"
+                card_view:cardCornerRadius="4dp">
 
-                <fragment
-                    android:id="@+id/place_autocomplete_fragment"
-                    android:layout_width="0dp"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="5"
-                    android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
-                    />
-                
-                <ImageView
-                    android:id="@+id/event_get_position"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:src="@drawable/ic_gps_fixed"
-                    android:tint="@color/md_black_1000"/>
-            </LinearLayout>
+                    android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
+
+                    <fragment
+                        android:id="@+id/place_autocomplete_fragment"
+                        android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="5" />
+
+                    <ImageView
+                        android:id="@+id/event_get_position"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:src="@drawable/ic_gps_fixed"
+                        android:tint="@color/md_black_1000" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
         </LinearLayout>
 
         <RelativeLayout
