Twitter in round icons

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -38,6 +38,14 @@
             />
 
         <ImageView
+            android:id="@+id/icon_twitter"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:src="@drawable/ic_twitter_round"
+            app:arc_origin="center"
+            />
+
+        <ImageView
             android:id="@+id/icon_question"
             android:layout_width="48dp"
             android:layout_height="48dp"
